<resources>
    <string name="app_name">Money Converter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="equals">"="</string>
    <string name="button_finance_title">FІNANCE.UA</string>
    <string name="nav_header_title_eng">Money Converter (Ukraine)</string>
    <string name="nav_header_subtitle_eng">"Last update: "</string>
    <string name="drawer_item_organizations_eng">Organizations</string>
    <string name="drawer_item_currencies_eng">Currencies</string>
    <string name="drawer_item_converter_eng">Converter</string>
    <string name="drawer_item_results_eng">Templates</string>
    <string name="drawer_item_others_eng">Others</string>
    <string name="drawer_item_update_eng">Update data</string>
    <string name="drawer_item_language_eng">Language</string>
    <string name="drawer_item_about_eng">About app</string>
    <string name="menu_item_search_title_eng">Search</string>
    <string name="menu_item_search_hint_eng">Enter title</string>
    <string name="dialog_info_title_warning_eng">Warning</string>
    <string name="dialog_info_message_eng">Your Internet connection is disable. Moreover, you do not have
        saved data in database to work with app without Internet.
        Please, check your Internet connection and Internet permissions of application in device Settings</string>
    <string name="dialog_info_button_one_eng">Repeat</string>
    <string name="dialog_info_button_two_eng">Exit</string>
    <string name="toast_message_server_error_eng">Your Internet connection
        is disable or app can not get answer from server. Your data is not updated.
        Please, check your Internet connection  and Internet permissions of application in device Settings</string>
    <string name="org_list_item_type_bank_eng">Bank</string>
    <string name="org_list_item_type_other_eng">Exchange office</string>
    <string name="org_list_item_button_eng">More information</string>
    <string name="dialog_list_filter_title_eng">Filter</string>
    <string name="dialog_list_filter_first_item_eng">Show everything</string>
    <string name="menu_phone_item_title_eng"> Call</string>
    <string name="aed_eng">UAE Dirham</string>
    <string name="amd_eng">Armenian drama</string>
    <string name="aud_eng">Australian Dollar</string>
    <string name="azn_eng">Azerbaijani manat</string>
    <string name="bgn_eng">Bulgarian Lev</string>
    <string name="brl_eng">Brazilian Real</string>
    <string name="byn_eng">Belarusian rubles</string>
    <string name="cad_eng">Canadian Dollar</string>
    <string name="chf_eng">Swiss Franc</string>
    <string name="clp_eng">Chilean Peso</string>
    <string name="cny_eng">Yuan Renminbi (China)</string>
    <string name="czk_eng">Czech Koruna</string>
    <string name="dkk_eng">Danish Krone</string>
    <string name="dzd_eng">Algerian Dinar</string>
    <string name="egp_eng">Egyptian Pound</string>
    <string name="eur_eng">EURO</string>
    <string name="gbp_eng">British Pound</string>
    <string name="gel_eng">Georgian Gulf</string>
    <string name="hkd_eng">Hong Kong Dollars</string>
    <string name="hrk_eng">Croatian Kuna</string>
    <string name="huf_eng">Hungarian forint</string>
    <string name="ils_eng">Israeli shekel</string>
    <string name="inr_eng">Indian rupee</string>
    <string name="iqd_eng">Iraqi dinars</string>
    <string name="jpy_eng">Japanese Yen</string>
    <string name="kgs_eng">Kyrgyz soms</string>
    <string name="krw_eng">South Korean Won</string>
    <string name="kwd_eng">Kuwaiti Dinar</string>
    <string name="kzt_eng">Kazakh tenge</string>
    <string name="lbp_eng">Lebanese Pound</string>
    <string name="mdl_eng">Moldovan Leu</string>
    <string name="mxn_eng">Mexican Peso</string>
    <string name="nok_eng">Norwegian Krone</string>
    <string name="nzd_eng">New Zealand Dollar</string>
    <string name="pkr_eng">Pakistani rupee</string>
    <string name="pln_eng">Polish zloty</string>
    <string name="ron_eng">Romanian New Leu</string>
    <string name="rub_eng">Russian rubles</string>
    <string name="sar_eng">Saudi Riyal</string>
    <string name="sek_eng">Swedish krona</string>
    <string name="sgd_eng">Singapore Dollar</string>
    <string name="thb_eng">Thai baht</string>
    <string name="tjs_eng">Tajik somoni</string>
    <string name="tmt_eng">Turkmen New Manat</string>
    <string name="try_eng">Turkish New Lira</string>
    <string name="twd_eng">Taiwan Dollar</string>
    <string name="usd_eng">US Dollar</string>
    <string name="vnd_eng">Vietnamese Dong</string>
    <string name="currencies_sale_eng">"Sale: "</string>
    <string name="currencies_purchase_eng">"Purchase: "</string>
    <string name="menu_order_item_title_eng">Order by</string>
    <string name="currency_activity_count_eng">"Count of organizations: "</string>
    <string-array name="currencies_order_by_options_eng">
        <item>Title</item>
        <item>Purchase</item>
        <item>Sale</item>
    </string-array>
    <string name="converter_count_of_currencies_eng">"Count of currencies: "</string>
    <string name="converter_main_currency_eng">UKRAINIAN HRYVNIA (UAH)</string>
    <string name="converter_sale_eng">Sale</string>
    <string name="converter_purchase_eng">Purchase</string>
    <string name="converter_dialog_action_title_eng">Procedure</string>
    <string name="converter_toast_failure_eng">Your value was not converted. Please, type correct value</string>
    <string name="dialog_template_text_eng">Do you want to create new template or edit existing?</string>
    <string name="dialog_template_edit_eng">Edit</string>
    <string name="dialog_template_create_eng">Create</string>
    <string name="converter_toast_template_edit_eng">Your template was edited</string>
    <string name="converter_toast_template_create_eng">New template was created</string>
    <string name="template_list_item_date_title_eng">"Last update of currency: "</string>
    <string name="template_toast_list_empty_eng">You do not have templates.
        Please, open Converter and add new template</string>
    <string name="converter_final_dialog_text_eng">Do you want to save template?</string>
    <string name="converter_final_dialog_yes_eng">Yes</string>
    <string name="converter_final_dialog_no_eng">No</string>
    <string name="toast_update_success_eng">Currencies data was updated</string>
    <string name="toast_update_success_2_eng">Data was updated</string>
    <string name="button_cancel_eng">Cancel</string>
    <string name="language_english_eng">English</string>
    <string name="language_russian_eng">Russian</string>
    <string name="language_ukrainian_eng">Ukrainian</string>
    <string name="about_text_eng">"        Main function of this application is currencies conversion, which are interesting for you. Program includes four categories. Organizations and currencies lists make your work more convenient and clear. You can employ functions of sort and search in lists. Application makes conversion of currency using data, which are given by organizations from list. To convert from Ukrainian hryvnia or into Ukrainian hryvnia, you need to choose currency, organization and type of activity (purchase or sale). In addition, you can create templates and use them in future. Information of currencies updates every day in the background. You are able to update data from application too. All information about currency is updated from finance.ua, where data was given by finance organizations.
        Features:
        -	comfortable converter,
        -	templates,
        -	actual information about currencies,
        -	background update,
        -	everyday update ,
        -	sort and search functions,
        -	nice design,
        -	a lot of finance organizations.
        Big thanks to finance.ua for actual information. To visit this resource, you can use the special button below.
        Have a good time with our application!"</string>
    <string name="toast_phone_no_permissions_eng">Application does not have needed permission for calling.
        Please, give this permission in Settings of device</string>
    <string name="button_settings_title_eng">Settings</string>
    <string name="nav_header_title_rus">Money Converter (Украина)</string>
    <string name="nav_header_subtitle_rus">"Последнее обновление: "</string>
    <string name="drawer_item_organizations_rus">Организации</string>
    <string name="drawer_item_currencies_rus">Курс валют</string>
    <string name="drawer_item_converter_rus">Конвертер</string>
    <string name="drawer_item_results_rus">Шаблоны</string>
    <string name="drawer_item_others_rus">Другое</string>
    <string name="drawer_item_update_rus">Обновить данные</string>
    <string name="drawer_item_language_rus">Язык</string>
    <string name="drawer_item_about_rus">О приложении</string>
    <string name="menu_item_search_title_rus">Поиск</string>
    <string name="menu_item_search_hint_rus">Введите название</string>
    <string name="dialog_info_title_warning_rus">Предупреждение</string>
    <string name="dialog_info_message_rus">Ваше интернет-соединение отключено. Кроме того, у вас нет сохраненных
        данных в базе данных для работы с приложением без интернета.
        Пожалуйста, проверьте подключение к интернету
        и предоставьте приложению разрешения на использование интернета в Настройках устройства</string>
    <string name="dialog_info_button_one_rus">Повторить</string>
    <string name="dialog_info_button_two_rus">Выход</string>
    <string name="toast_message_server_error_rus">Ваше интернет-соединение отключено
        или приложение не может получить ответа от сервера. Ваши данные не обновлены.
        Пожалуйста, проверьте подключение к интернету
        и предоставьте приложению разрешения на использование интернета в Настройках устройства</string>
    <string name="org_list_item_type_bank_rus">Банк</string>
    <string name="org_list_item_type_other_rus">Обменный пункт</string>
    <string name="org_list_item_button_rus">Больше информации</string>
    <string name="dialog_list_filter_title_rus">Фильтр</string>
    <string name="dialog_list_filter_first_item_rus">Показывать все</string>
    <string name="menu_phone_item_title_rus"> Позвонить</string>
    <string name="currencies_sale_rus">"Продажа: "</string>
    <string name="currencies_purchase_rus">"Покупка: "</string>
    <string name="menu_order_item_title_rus">Сортировка</string>
    <string name="currency_activity_count_rus">"Количестно организаций: "</string>
    <string-array name="currencies_order_by_options_rus">
        <item>По названию</item>
        <item>Покупка</item>
        <item>Продажа</item>
    </string-array>
    <string name="converter_count_of_currencies_rus">"Всего валют: "</string>
    <string name="converter_main_currency_rus">УКРАИНСКАЯ ГРИВНА (UAH)</string>
    <string name="converter_sale_rus">Продажа</string>
    <string name="converter_purchase_rus">Покупка</string>
    <string name="converter_dialog_action_title_rus">Операция</string>
    <string name="converter_toast_failure_rus">Конвертация не проведена. Пожалуйста, введите корректное значение</string>
    <string name="dialog_template_text_rus">Вы хотите создать новый шаблон или изменить существующий?</string>
    <string name="dialog_template_edit_rus">Изменить</string>
    <string name="dialog_template_create_rus">Создать</string>
    <string name="converter_toast_template_edit_rus">Ваш шаблон был изменен</string>
    <string name="converter_toast_template_create_rus">Добавлен новый шаблон</string>
    <string name="template_list_item_date_title_rus">"Дата обновления валюты: "</string>
</resources>