<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_organizations"
            android:icon="@drawable/ic_organization"
            android:title="@string/drawer_item_organizations_eng" />
        <item
            android:id="@+id/item_currencies"
            android:icon="@drawable/ic_currency"
            android:title="@string/drawer_item_currencies_eng" />
        <item
            android:id="@+id/item_converter"
            android:icon="@drawable/ic_converter"
            android:title="@string/drawer_item_converter_eng" />

        <item
            android:id="@+id/item_results"
            android:icon="@drawable/ic_result"
            android:title="@string/drawer_item_results_eng" />

    </group>


        <item android:title="@string/drawer_item_others_eng"
            android:id="@+id/item_others">
            <menu>
                <item
                    android:id="@+id/item_update"
                    android:icon="@drawable/ic_update"
                    android:title="@string/drawer_item_update_eng" />
                <item
                    android:id="@+id/item_language"
                    android:icon="@drawable/ic_language"
                    android:title="@string/drawer_item_language_eng" />
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/item_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/drawer_item_about_eng" />
                </group>
            </menu>
        </item>


</menu>
