<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/gradient_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_small_16dp"
    android:paddingLeft="@dimen/spacing_small_16dp"
    android:paddingRight="@dimen/spacing_small_16dp"
    android:paddingTop="@dimen/spacing_small_16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_header_image_iv"
        android:layout_width="@dimen/size_60dp"
        android:layout_height="@dimen/size_60dp"
        android:src="@color/white"
        android:contentDescription="@string/nav_header_desc"
        android:layout_marginTop="@dimen/spacing_smaller_8dp"/>

    <TextView
        android:id="@+id/nav_header_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_smaller_8dp"
        android:text="@string/nav_header_title_eng"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_header_subtitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle_eng" />

</LinearLayout>
